# admin/src/gen/types/StatusResponse.ts
@@ -1,0 +1,11 @@
+/**
+ * Generated by Kubb (https://kubb.dev/).
+ * Do not edit manually.
+ */
+
+export type StatusResponse = {
+  /**
+   * @type boolean | undefined
+   */
+  success?: boolean
+}
