# admin/src/gen/types/UserResponse.ts
@@ -1,0 +1,76 @@
+/**
+ * Generated by Kubb (https://kubb.dev/).
+ * Do not edit manually.
+ */
+
+import type { BadgeResponse } from './BadgeResponse.ts'
+import type { CityResponse } from './CityResponse.ts'
+import type { OpportunityResponse } from './OpportunityResponse.ts'
+import type { VerificationStatus } from './VerificationStatus.ts'
+
+export type UserResponse = {
+  /**
+   * @type string | undefined
+   */
+  avatar_url?: string
+  /**
+   * @type array | undefined
+   */
+  badges?: BadgeResponse[]
+  /**
+   * @type integer | undefined
+   */
+  chat_id?: number
+  /**
+   * @type string | undefined
+   */
+  created_at?: string
+  /**
+   * @type string | undefined
+   */
+  description?: string
+  /**
+   * @type string | undefined
+   */
+  first_name?: string
+  /**
+   * @type string | undefined
+   */
+  id?: string
+  /**
+   * @type string | undefined
+   */
+  language_code?: string
+  /**
+   * @type string | undefined
+   */
+  last_active_at?: string
+  /**
+   * @type string | undefined
+   */
+  last_name?: string
+  /**
+   * @type object | undefined
+   */
+  location?: CityResponse
+  /**
+   * @type array | undefined
+   */
+  opportunities?: OpportunityResponse[]
+  /**
+   * @type string | undefined
+   */
+  title?: string
+  /**
+   * @type string | undefined
+   */
+  updated_at?: string
+  /**
+   * @type string | undefined
+   */
+  username?: string
+  /**
+   * @type string | undefined
+   */
+  verification_status?: VerificationStatus
+}
